--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/react": "16.8.20",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.1.0",
-    "@types/react-router": "^5.0.2",
+    "@types/react-router-dom": "^4.3.4",
     "antd": "^3.19.6",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
