--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-spring": "^8.0.25",
+    "react-use-gesture": "^5.1.2",
     "redux": "^4.0.1",
     "typescript": "3.5.2"
   },
