update: move panel attributes to store

--- a/src/config.json
+++ b/src/config.json
@@ -39,5 +39,7 @@
     "dynamicMenu",
     "speechToTextPanel"
   ],
-  "margin": 10
+  "margin": 10,
+  "headerHeight": 100,
+  "footerHeight": 100
 }
