--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-redux": "^7.1.0",
     "@types/react-router-dom": "^4.3.4",
     "antd": "^3.19.6",
+    "axios": "^0.19.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
@@ -21,7 +22,8 @@
     "react-spring": "^8.0.25",
     "react-use-gesture": "^5.1.2",
     "redux": "^4.0.1",
-    "typescript": "3.5.2"
+    "typescript": "3.5.2",
+    "watson-speech": "^0.36.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +48,7 @@
     "@typescript-eslint/parser": "^1.10.2",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^5.0.0",
+    "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
