--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
 PORT=3001
+
+# Watson Speech support:
+# Replace with your own information!
+SPEECH_TO_TEXT_USERNAME=
+SPEECH_TO_TEXT_PASSWORD=
+# OR IAM API key and URL
+SPEECH_TO_TEXT_IAM_APIKEY=A6jmaKwjgRzfYzfB6YxJYdaiRdwhOTgS8_pY29Kx26v7
+SPEECH_TO_TEXT_IAM_URL=
+# Service URL
+SPEECH_TO_TEXT_URL=https://stream.watsonplatform.net/speech-to-text/api
