update: store result keywords from api server

--- a/src/config.json
+++ b/src/config.json
@@ -13,6 +13,6 @@
   "shadowSizeWhileDragging": 50,
   "watsonSpeech": {
     "accessTokenURL": "/api/v1/credentials",
-    "defaultKeywords": []
+    "defaultKeywords": ["テスト", "天気", "散歩"]
   }
 }
