update: save panels' information to server

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ SPEECH_TO_TEXT_IAM_APIKEY=A6jmaKwjgRzfYzfB6YxJYdaiRdwhOTgS8_pY29Kx26v7
 SPEECH_TO_TEXT_IAM_URL=
 # Service URL
 SPEECH_TO_TEXT_URL=https://stream.watsonplatform.net/speech-to-text/api
+
+# API
+API_PANELS='/api/panels'
