--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ SPEECH_TO_TEXT_IAM_URL=
 # Service URL
 SPEECH_TO_TEXT_URL=https://stream.watsonplatform.net/speech-to-text/api
 
-# API
-API_PANELS='/api/panels'
+# API SERVER
+API_SERVER=http://localhost:3002/
