--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "demo-adjustable-web",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3002/",
   "dependencies": {
     "@types/jest": "24.0.15",
     "@types/lodash": "^4.14.134",
@@ -13,6 +12,7 @@
     "@types/react-router-dom": "^4.3.4",
     "antd": "^3.19.6",
     "axios": "^0.19.0",
+    "http-proxy-middleware": "^0.19.1",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
     "node-sass": "^4.12.0",
