--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "demo-adjustable-web",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
@@ -12,6 +13,7 @@
     "@types/react-router-dom": "^4.3.4",
     "antd": "^3.19.6",
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "http-proxy-middleware": "^0.19.1",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
