--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@types/react-router-dom": "^4.3.4",
     "antd": "^3.19.6",
     "axios": "^0.19.0",
-    "babel-polyfill": "^6.26.0",
     "http-proxy-middleware": "^0.19.1",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
@@ -44,7 +44,8 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "last 1 ie version"
     ]
   },
   "devDependencies": {
