update: add panel resize handlers for each corners and each borders

--- a/src/config.json
+++ b/src/config.json
@@ -12,6 +12,10 @@
     "normalWidth": 0.3,
     "largeWidth": 0.4
   },
+  "panelMinSize": {
+    "minHeight": 160,
+    "minWidth": 240
+  },
   "api": {
     "accessTokenURL": "/api/v1/credentials",
     "panels": "/api/panels"
