refactor: part 1 of decoupling

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -40,5 +40,13 @@
       "増額",
       "契約額"
     ]
-  }
+  },
+  "fixedMenu": [
+    "振込貸付",
+    "書類発送",
+    "一時約束日",
+    "自宅/勤務先変更",
+    "利用限度額/利率変更受付",
+    "カード再発行受付"
+  ]
 }
