update: fetch data from remote api server

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ SPEECH_TO_TEXT_URL=https://stream.watsonplatform.net/speech-to-text/api
 
 # API SERVER
 API_SERVER=http://localhost:3002/
+DATA_API_SERVER=http://169.63.236.248:30293
